=== UNRELEASED / UNRELEASED

* When generating the gem, grab description from README.
* Update README.

=== 0.2.0 / 2010-08-29

* Add Random.
* Add Password.

=== 0.1.1 / 2010-08-25

* Reupload 0.1.0 with fixed file permissions.

=== 0.1.0 / 2010-02-14

* Update README.
* Test best_datasync more thoroughly.
* Switch to jeweler from hoe.
* Update copyright year.

=== 0.0.5 / 2009-06-28

* Implement IO#best_datasync, have overwrite use it.

=== 0.0.4 / 2009-06-28

* Implement overwrite, a method to safely replace a file.
* Update README.
* Move exception printing from sh to catching_exit.

=== 0.0.3 / 2009-06-28

* Rename checking_exit_status as fork_and_check to make it clear it forks.
* Add catching_exit, which is now used by the do_and_exit methods.
* Pass a fallthrough exit status to do_and_exit.

=== 0.0.2 / 2009-06-28

* Initial release
